--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-  "name": "fcc-api-projects-boilerplate",
-  "version": "0.0.1",
-  "description": "An FCC Backend Challenge",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "name": "fcc-learn-node-with-express",
+  "version": "0.1.0",
   "dependencies": {
-    "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "body-parser": "^1.15.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.14.0",
+    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-timestamp.git"
-  },
-  "bugs": {
-    "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
-  },
-  "homepage": "https://github.com/freeCodeCamp/boilerplate-project-timestamp#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
-  "keywords": [
-    "node",
-    "express",
-    "freeCodeCamp"
-  ],
-  "license": "MIT"
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  }
 }
